--- a/sass/custom/_header.scss
+++ b/sass/custom/_header.scss
@@ -302,6 +302,7 @@ $header-height: 30px;
 	.social{
 		position: absolute;
 		left: -15px;
+		top: -5px;
 		margin-right: 0px;
 		a{
 			@include border-radius(50%);
@@ -380,3 +381,4 @@ $header-height: 30px;
 		}
 	}
 }
+
